assets/css/style.css
/* Custom Stylesheet */

/* hide the scrollbar in chrome, safari and opera browsers
without affecting the scroll function */
::-webkit-scrollbar{
  display: none;
}

/* padding for text to be aligned */
.nav-material-icons {
  padding-right: 20%;
}

/* make content full screen when sidenav is shown */
header, main, footer {
  padding-left: 300px;
}

/* profile pic */
#selfie {
  max-width: 50%;
  height: auto;
  margin-top: 10%;
}

/* section will take up the full display */
.intro {
  min-height: 100vh;
}

/* projects section will take up 85% height relative to the display, in order to include the footer */
#collapsible-section {
  min-height: 85vh;
}

/* centering the job title section */
#job-title{
  margin: 0 auto;
  font-weight: bold;
}

/* collapsible content */
.collapsible-body {
  background-color: #e1f5fe;
}

/* the title of the projects */
.collapsible-header {
  font-weight: bold;
}

/* project title styling */
.project-titles {
  font-weight: bold;
  text-align: center;
  color: white;
}

/* material icons text to be bold */
i {
  font-weight: bold;
}

/* main project header styling */
#project-header {
  font-family: 'Shrikhand', cursive;
  font-weight: bold;
  font-style: italic;
  margin-bottom: 10%;
}

/* p html element styling within the project section */
.project-section p {
  font-family: 'Shrikhand', cursive;
  font-size: 120%;
  margin-top: 0;
}

/* list items in the project section styling */
.project-section li {
  font-size: 105%;
}

/* contact info within bottom modal */
.modal-content h2, h5{
  font-weight: bold;
}

/* for screens smaller than 993px... */
@media only screen and (max-width : 992px) {
  /* hide sidenav */
  header, main, footer {
    padding-left: 0;
  }
}

/* for screens smaller than 601px... */
@media only screen and (max-width: 600px) {
  /* make profile pic smaller */
  #selfie {
    max-width: 35%;
    height: auto;
    margin-top: 10%;
  }
  /* make the projects section header 10% of the viewport so it can fit in one line */
  #project-header {
    font-size: 10vw;
  }
}

